src/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creditapplication-service-deployment
  labels:
    app: creditapplication-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: creditapplication-service
  template:
    metadata:
      labels:
        app: creditapplication-service
    spec:
      serviceAccountName: creditapplication-service-sa
      containers:
        - name: creditapplication-service
          image: europe-west1-docker.pkg.dev/vbdev-436712/lpt/creditapplication-service:TO_REPLACED
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "1000m"
              memory: "1024Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - mountPath: /config/
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: application-config
