src/k8s/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lpt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lpt
  name: creditapplication-service-deployment
  labels:
    app: creditapplication-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: creditapplication-service
  template:
    metadata:
      labels:
        app: creditapplication-service
    spec:
      serviceAccountName: creditapplication-service-sa
      containers:
        - name: creditapplication-service
          image: europe-west1-docker.pkg.dev/vbdev-436712/lpt/creditapplication-service:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "1000m"
            limits:
              cpu: "1000m"
