src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creditapplication-k8s-service
  annotations:
    # https://cloud.google.com/kubernetes-engine/docs/how-to/container-native-load-balancing
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "lpt-backend-config"}'
  labels:
    app: creditapplication-service
spec:
  type: ClusterIP
  selector:
    app: creditapplication-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
