src/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: creditapplication-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "creditapplication-service-public-ip"
    cloud.google.com/neg: '{"exposed-service": {"ingress": true}}'
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - secretName: web-ssl
      hosts:
        - creditapplication.api.lpt.senacor.com
  defaultBackend:
    service:
      name: creditapplication-k8s-service
      port:
        number: 8080
